Updated scoreController.js
Got rid of all scores/ranking endpoints. Changed it for queries.

Removed ranking as a property that can be changed by front-end. Instead calculated rankings as we complete the get request by filtering by highest points and looping through each score, setting the ranking property for each one.

Made it so the leaderboard gets only the user's score. Checked with front-end team and they want both. Gave them a couple of approaches and asked their input.

Worked on adding queries. Ex: scores?ranking=5 will give you the 5th ranking in the scores collection.
