# controllers/scoreController.js
@@ -1,16 +1,41 @@
+const url = require('url');
 const Score = require('../models/score');
+const { auth } = require("express-openid-connect")
 
 // /scores endpoints
 
 const getScores = async (req, res) => {
-
     // #swagger.tags = ['Score']
     // #swagger.description = 'Get all score items in collection'
 
     try {
-        const scores = await Score.find();
-        res.status(200).json(scores);
+        const queryObject = req.query;
+        // {name:"dad", fine:10, id:"23423098472398742342"}
+        
+        // rasdfasdfasdfasdf/scores?name=dad&fine=10&id=234234234
 
+        // query.Where(x => x.name is bill && false)
+        // query.Where(x => (queryObject.Id == null || x.Id == queryObject.Id) &&
+        // (queryObject.Name == null || x.Name == queryObject.Name) &&)
+
+
+        scores = await getAllScores(req.oidc.user.email);
+
+
+        
+        var result = scores;
+
+        // Query
+        if(queryObject.ranking != null)
+        {
+           result = scores.filter(item => item.ranking == queryObject.ranking);
+        }
+        if(queryObject.username != null)
+        {
+           result = scores.filter(item => item.username == queryObject.username);
+        }
+
+        res.status(200).json(result);
     } catch(err) {
         res.status(500).json({message: err.message});
     }
@@ -22,9 +47,7 @@ const createScores = async (req, res) => {
     // #swagger.description = 'Create score item and add to collection'
 
     const score = new Score ({
-
-        ranking: req.body.ranking,
-        username: req.body.username,
+        username: req.oidc.user.email,
         score: req.body.score
     })
     
@@ -171,6 +194,22 @@ async function getScoreByRanking(req, res, next) {
     }
     res.score = score;
     next();
+}
+
+async function getAllScores(email)
+{
+    scores = await Score.find();
+    scores = scores.filter(item => item.username == email);
+
+    var result = scores.sort((a,b) => b.score- a.score);
+        
+        index = 1
+        result.forEach(score => {
+            
+            score.ranking = index++;
+            
+        });
+    return scores;
 }
 
 module.exports = {
