# models/case.js
@@ -6,18 +6,14 @@ const caseSchema = new mongoose.Schema({
     caseName: String,
     summariedCaseDescription: String,
     caseType: String,
-    victimPicture: 
-    {
-        data: Buffer,
-        contentType: String
-    },
+    victimPicture: String,
     victimName: String,
     victimAge: Number,
     caseDate: Date,
     location: String,
     caseStatus: String,
     websiteUrl: String,
-    agencyInformation: [agencySchema]
+    agencyInformation: agencySchema
 });
 
 const cases = mongoose.model('Case', caseSchema, "cases");
